--- a/form.html
+++ b/form.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Shine Cart</title>
     <style>
         body{
@@ -16,6 +18,20 @@
         }
     </style>
 </head>
+
+<header>
+    <h1>SHINE BRIGHT SOAPS</h1>
+
+    <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="form.html" style="color: black;">ORDER</a></li>
+    </ul>
+
+
+</header>
+
+
 <body>
     <section id="asd">
 
@@ -31,11 +47,11 @@
             <label>Fabric Softener: <input type="radio" name="Select"></label><br><br>
             <label>Dish Washing Liquid: <input type="radio" name="Select"></label><br><br> 
 
-            <input type="submit" name="submit" value="Submit" style="border-radius: 20%;font-size: large; background-color: #f7d4e7;">
+            <input type="submit" name="submit" value="Submit" style="border-radius: 20%;font-size: large; background-color: #f7d4e7; color: #813b63;">
         <h1><center>THANK YOU !!</center></h1>
         </form>
-        </div>
-        <center><a href="ShineSoaps.html"><button style="border-radius: 20%;font-size: large; background-color: #f7d4e7;">GO TO HOME PAGE</button></a></center>
+        </div><br>
+        <center><button type="button" class="btn btn-info"> GO TO HOME PAGE</button></center>
     </section>
 
 
