--- a/index.html
+++ b/index.html
@@ -4,54 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>SHINE SOAPS</title>
-    <style>
-        body {
-
-            margin: 80px;
-            padding: 50px;
-        }
-
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #6b414f;
-        }
-
-        li {
-            float: left;
-        }
-
-        li a {
-            display: block;
-            padding: 8px;
-            text-decoration: none;
-            color: white;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-
-        .boxy {
-            background: #f7d4e7;
-            border: solid 4px #6b414f;
-        }
-
-        #asdf {
-            color: #6b414f;
-        }
-    </style>
-
+   
 </head>
-<header style="position: fixed;
-     top: 0% ;right: 0%; color: #f7d4e7;text-align: center;
-      width: 100%; background-color:#6b414f ; font-family: fantasy;">
+<header>
     <h1>SHINE BRIGHT SOAPS</h1>
 
     <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="ShineSoapsAbout.html">ABOUT</a></li>
-        <li><a href="ShineSoapsForm.html">ORDER</a></li>
+        <li><a href="index.html" style="color: black;">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="form.html">ORDER</a></li>
     </ul>
 
 
@@ -81,9 +44,7 @@
             </div>
             <div class="col-lg=3 col-md-6 col-sm-12 boxy">
                 <img src="img/powder.jpg" width="240" height="200">
-                <a id="asdf" ; href="ShineSoapsForm.html"
-                    style="float: right; font-size:x-large; text-align:center;text-shadow: 20%; text-decoration: wavy;font-weight:20px ;font-family: cursive;">ORDER
-                    NOW !!</a>
+                <a id="asdf" ; href="form.html">ORDER NOW !!</a>
             </div>
             <div class="col-lg=3 col-md-6 col-sm-12 boxy">
                 <h2>
@@ -98,9 +59,7 @@
             </div>
             <div class="col-lg=3 col-md-6 col-sm-12 boxy">
                 <img src="img/liquid.jpg" width="240" height="200">
-                <a id="asdf" ;href="ShineSoapsForm.html"
-                    style="float: right; font-size:x-large; text-align:center;text-shadow: 20%; text-decoration: wavy;font-weight:20px ;font-family: cursive;">ORDER
-                    NOW !!</a>
+                <a id="asdf" ;href="form.html">ORDER NOW !!</a>
             </div>
             <div class="col-lg=3 col-md-6 col-sm-12 boxy">
                 <h2>
@@ -116,9 +75,7 @@
             </div>
             <div class="col-lg=3 col-md-6 col-sm-12 boxy">
                 <img src="img/conditioner.jpg" width="240" height="200">
-                <a id="asdf" ; href="ShineSoapsForm.html"
-                    style="float: right; font-size:x-large; text-align:center;text-shadow: 20%; text-decoration: wavy;font-weight:20px ;font-family: cursive;">ORDER
-                    NOW !!</a>
+                <a id="asdf" ; href="form.html">ORDER NOW !!</a>
             </div>
             <div class="col-lg=3 col-md-6 col-sm-12 boxy">
                 <h2>
@@ -134,9 +91,7 @@
             </div>
             <div class="col-lg=3 col-md-6 col-sm-12 boxy">
                 <img src="img/dish.jpg" width="240" height="200">
-                <a id="asdf" href="ShineSoapsForm.html"
-                    style="float: right; font-size:x-large; text-align:center;text-shadow: 20%; text-decoration: wavy;font-weight:20px ;font-family: cursive;">ORDER
-                    NOW !!</a>
+                <a id="asdf" href="form.html">ORDER NOW !!</a>
             </div>
         </div>
     </div>
@@ -144,8 +99,7 @@
 
 
     <center>
-        <footer
-            style="background-color: #6b414f;font-size:large ;color: white; position: fixed; bottom: 0%; left:0%; right: 0%;">
+        <footer>
             <p>COPYRIGHT &copy; SHINE BRIGHT SOAPS </p>
         </footer>
     </center>
