--- a/about.html
+++ b/about.html
@@ -6,13 +6,28 @@
 
     <title>ABOUT US</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    
 </head>
+
+<header>
+    <h1>SHINE BRIGHT SOAPS</h1>
+
+    <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="about.html" style="color: black;">ABOUT</a></li>
+        <li><a href="form.html">ORDER</a></li>
+    </ul>
+
+
+</header>
+
 
 <body style="margin: 80px; padding: 20px; background-color: #f7d4e7;">
     <h2>A SMALL BRIEF ABOUT US</h2>
-    <section style="background-color: #6b414f; margin: 40px; padding: 60px;">
+    <section>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id consequatur maxime,
         perferendis eius, fugiat optio suscipit ex doloremque
         vero rem deserunt architecto quidem velit adipisci omnis porro modi asperiores cum?
@@ -28,7 +43,7 @@
     </section>
 
     <center>
-        <a href="ShineSoaps.html">
+        <a href="index.html">
 
             <button type="button" class="btn btn-info"> GO TO HOME PAGE</button>
         </a>
