--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>SHINE BRIGHT SOAPS</h1>
 
     <ul>
-        <li><a href="index.html" style="color: black;">HOME</a></li>
+        <li><a href="index.html" style="color: #000000;">HOME</a></li>
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="form.html">ORDER</a></li>
     </ul>
@@ -24,13 +24,13 @@
 
     <BR>
 
-    <H2>PURCHASE CUSTOMISED SOAPS FOR YOUR HOUSEHOLD HERE!!</H2>
+    <H2><center>PURCHASE CUSTOMISED SOAPS FOR YOUR HOUSEHOLD HERE!!</center></H2>
 
     <div class="container">
         <div class="row">
 
 
-            <div class="col-lg=3 col-md-6 col-sm-12 boxy">
+            <div class="col-md-6  boxy">
                 <h2>
                     DETERGENT POWDER
                 </h2>
@@ -42,11 +42,14 @@
                     to soap but are less affected by hard water.<br>
                 </p>
             </div>
-            <div class="col-lg=3 col-md-6 col-sm-12 boxy">
+            
+            <div class="col-md-6 boxy">
                 <img src="img/powder.jpg" width="240" height="200">
                 <a id="asdf" ; href="form.html">ORDER NOW !!</a>
             </div>
-            <div class="col-lg=3 col-md-6 col-sm-12 boxy">
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-12 boxy">
                 <h2>
                     DETERGENT LIQUID
                 </h2>
@@ -57,11 +60,13 @@
                     of surfactants with cleaning properties in dilute solutions.<br>
                 </p>
             </div>
-            <div class="col-lg=3 col-md-6 col-sm-12 boxy">
+            <div class="col-md-6 col-sm-12 boxy">
                 <img src="img/liquid.jpg" width="240" height="200">
                 <a id="asdf" ;href="form.html">ORDER NOW !!</a>
             </div>
-            <div class="col-lg=3 col-md-6 col-sm-12 boxy">
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-12 boxy">
                 <h2>
                     FABRIC CONDITIONER
                 </h2>
@@ -73,11 +78,13 @@
                     making them more comfortable to wear against the skin.<br>
                 </p>
             </div>
-            <div class="col-lg=3 col-md-6 col-sm-12 boxy">
+            <div class="col-md-6 col-sm-12 boxy">
                 <img src="img/conditioner.jpg" width="240" height="200">
                 <a id="asdf" ; href="form.html">ORDER NOW !!</a>
             </div>
-            <div class="col-lg=3 col-md-6 col-sm-12 boxy">
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-12 boxy">
                 <h2>
                     DISH WASHING LIQUID
                 </h2>
@@ -89,7 +96,7 @@
                     utensils in a sink or bowl.
                 </p>
             </div>
-            <div class="col-lg=3 col-md-6 col-sm-12 boxy">
+            <div class="col-md-6 col-sm-12 boxy">
                 <img src="img/dish.jpg" width="240" height="200">
                 <a id="asdf" href="form.html">ORDER NOW !!</a>
             </div>
