--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
     <h1>SHINE BRIGHT SOAPS</h1>
 
     <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="about.html" style="color: black;">ABOUT</a></li>
-        <li><a href="form.html">ORDER</a></li>
+        <li><a class="a" href="index.html">HOME</a></li>
+        <li><a class="a" href="about.html" style="color: black;">ABOUT</a></li>
+        <li><a class="a" href="form.html">ORDER</a></li>
     </ul>
 
 
@@ -27,7 +27,7 @@
 
 <body style="margin: 80px; padding: 20px; background-color: #f7d4e7;">
     <h2>A SMALL BRIEF ABOUT US</h2>
-    <section>
+    <section class="about">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id consequatur maxime,
         perferendis eius, fugiat optio suscipit ex doloremque
         vero rem deserunt architecto quidem velit adipisci omnis porro modi asperiores cum?
@@ -45,7 +45,7 @@
     <center>
         <a href="index.html">
 
-            <button type="button" class="btn btn-info"> GO TO HOME PAGE</button>
+            <button class="button"><span>GO TO HOME PAGE</span></button>
         </a>
     </center>
 
