--- a/about.html
+++ b/about.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
 
     <title>ABOUT US</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 
@@ -17,7 +24,7 @@
 
     <ul>
         <li><a class="a" href="index.html">HOME</a></li>
-        <li><a class="a" href="about.html" style="color: black;">ABOUT</a></li>
+        <li><a class="a" href="about.html" style="color: #FCDC2A;">ABOUT</a></li>
         <li><a class="a" href="form.html">ORDER</a></li>
     </ul>
 
@@ -25,7 +32,7 @@
 </header>
 
 
-<body style="margin: 80px; padding: 20px; background-color: #f7d4e7;">
+<body style="margin: 80px; padding: 20px; background-color: #F7F6BB;">
     <h2>A SMALL BRIEF ABOUT US</h2>
     <section class="about">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id consequatur maxime,
@@ -44,7 +51,6 @@
 
     <center>
         <a href="index.html">
-
             <button class="button"><span>GO TO HOME PAGE</span></button>
         </a>
     </center>
