--- a/form.html
+++ b/form.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+
     <title>Shine Cart</title>
 
 </head>
@@ -14,21 +19,21 @@
     <ul>
         <li><a class="a" href="index.html">HOME</a></li>
         <li><a class="a" href="about.html">ABOUT</a></li>
-        <li><a class="a" href="form.html" style="color: black;">ORDER</a></li>
+        <li><a class="a" href="form.html" style="color: #FCDC2A;">ORDER</a></li>
     </ul>
 
 
 </header>
 
 
-<body style="background-color: #f7d4e7;">
+<body style="background-color:#F7F6BB;">
     <section id="asd">
 
         <div>
         <form>
             <h1><center>Your shopping cart</center></h1><br><br>
-            <label>Enter your name: <input type="text" name="Name" placeholder="Name" style="background-color: #f7d4e7;"></label><br><br>
-            <label>Enter your mobile number: <input type="text" name="Number" placeholder="Number" style="background-color: #f7d4e7;"></label><br>
+            <label>Enter your name: <input type="text" name="Name" placeholder="Name" style="background-color: #F7F6BB;"></label><br><br>
+            <label>Enter your mobile number: <input type="text" name="Number" placeholder="Number" style="background-color: #F7F6BB;"></label><br>
 
             <br><p style="font-size: x-large;">Select the product you need to buy: </p> <br>
             <label>Detergent powder: <input type="radio" name="Select"></label><br><br>
@@ -36,7 +41,7 @@
             <label>Fabric Softener: <input type="radio" name="Select"></label><br><br>
             <label>Dish Washing Liquid: <input type="radio" name="Select"></label><br><br> 
 
-            <input type="submit" name="submit" value="Submit" style="border-radius: 20%;font-size: large; background-color: #f7d4e7; color: #813b63;">
+            <input type="submit" name="submit" value="Submit" style="border-radius: 20%;font-size: x-large;font-weight: bolder; background-color: #F7F6BB; color: #114232;">
         <h1><center>THANK YOU !!</center></h1>
         </form>
         </div><br>
